genesis library interface in kotlin